fix: add nylas for calendar api

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DATABASE_URL="postgres://postgres.[your-supabase-project]:[password]@aws-0-[aws-
 
 # Direct connection to the database. Used for migrations.
 DIRECT_URL="postgres://postgres.[your-supabase-project]:[password]@aws-0-[aws-region].pooler.supabase.com:5432/postgres"
+
+NYLAS_API_KEY=
+NYLAS_API_URI=
+
+NYLAS_CLIENT_ID=
+NYLAS_REDIRECT_URI=
