--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@uploadthing/react": "^7.3.0",
@@ -28,6 +29,7 @@
     "next-themes": "^0.4.4",
     "nylas": "^7.8.0",
     "react": "^19.0.0",
+    "react-aria-components": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.1",
